fix: overflow problem

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -136,3 +136,7 @@ tree-master-detail-component {
 .angular-ui-tree-node, .angular-ui-tree-placeholder {
   min-height: 10px;
 }
+
+.scrollable {
+  overflow: auto;
+}
